--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="FCC, freecodecamp, personal portfolio webpage, Zeth, zethwashere, machine shrine, zeth's portfolio">
     <meta name="author" content="NeKo, NeKowehere">
     <title>Neko's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styleme.css">
   </head>
   
   <body>
